opam-version: "2.0"
name: "infer"
version: "1.2.0"
synopsis: "A multi-language static analyzer"
maintainer: "the infer team"
authors: "Meta"
homepage: "https://github.com/facebook/infer"
bug-reports: "https://github.com/facebook/infer/issues"
dev-repo: "git://github.com/facebook/infer.git"
license: "MIT"
depends: [
  "ANSITerminal" {>="0.7"}
  "atdgen" {>="2.0.0"}
  "base64" {>="3.0.0"}
  "bheap"
  "cmdliner" {>="1.0.0"}
  "core" {>= "v0.16.1" & < "v0.17"}
  "core_unix" {>= "v0.16.0" & < "v0.17"}
  "conf-autoconf" {build}
  "conf-sqlite3" {build}
  "conf-zlib" {build}
  "containers" {>="3.15"}
  "containers-data" {>="3.15"}
  "ctypes" {>="0.9.2"}
  "dune" {build & >="3.6"}
  "fmt" {>="0.9.0"}
  "fpath" {>="0.7.3"}
  "iter"
  "javalib" {>="3.2.1"}
  "memtrace" {>="0.1.2"}
  "menhir" {>= "20220210"}
  "mtime" {>="2"}
  "ocaml" {>="5.2.1"}
  "ocamlfind" {build}
  "ocamlgraph"
  "ounit" {>="2.0.5"}
  "parmap" {>="1.0-rc8"}
  "ppx_blob"
  "ppx_compare" {>= "v0.16.0" & < "v0.17"}
  "ppx_deriving" {>="4.1"}
  "ppx_enumerate" {>= "v0.16.0" & < "v0.17"}
  "ppx_expect" {>= "v0.16.0" & < "v0.17"}
  "ppx_fields_conv" {>= "v0.16.0" & < "v0.17"}
  "ppx_show"
  "ppx_yojson_conv" {>= "v0.16.0" & < "v0.17"}
  "pyml" {= "20220905"}
  "sawja" {>="1.5.11"}
  "sedlex" {>="3.0"}
  "sqlite3"
  "tdigest" {>="2.0.0"}
  "utop" {with-test}
  "xmlm" {>="1.2.0"}
  "yojson" {>="1.7.0"}
  "zarith" {>="1.7"}
]
build: [
  ["./autogen.sh"]
  ["./configure" "--prefix=%{prefix}%"]
  [make "-j" jobs]
  [make "-j" jobs "config_tests"] {with-test}
]
install: [make "install"]
depexts: [
  ["default-jdk"] {"ubuntu"}
  ["default-jdk"] {"debian"}
]
