opam-version: "2.0"
maintainer: "Josh Berdine <jjb@fb.com>"
authors: "Josh Berdine <jjb@fb.com>"
homepage: "https://github.com/facebook/infer/tree/main/sledge"
bug-reports: "https://github.com/facebook/infer/issues/new?template=sledge_issue_template.md"
dev-repo: "https://github.com/facebook/infer.git"
license: "MIT"
build: [
  [make "-C" "sledge" "release"]
]
depends: [
  "ocaml" {>= "4.13.0"}
  "apron" {>= "v0.9.13"}
  "base"
  "conf-llvm" {= "12.0.1"}
  "containers" {>= "3.4"}
  "containers-data"
  "core" {>= "v0.15" & < "v0.16"}
  "core_unix"
  "ctypes"
  "ctypes-foreign"
  "dune" {build & >= "3.0"}
  "dune-build-info" {build}
  "fpath"
  "memtrace"
  "mtime"
  "ppx_compare"
  "ppxlib" {>= "0.21.0"}
  "psq"
  "sexplib"
  "shexp"
  "smtlib-utils" {> "0.1"}
  "yojson"
  "zarith"
]
synopsis: "SLEdge analyzer"
description: "SLEdge analyzer"
