opam-version: "1.2"
maintainer: "Josh Berdine <jjb@fb.com>"
authors: "Josh Berdine <jjb@fb.com>"
homepage: "https://github.com/facebook/infer/tree/master/sledge/src/llair"
bug-reports: "https://github.com/facebook/infer/issues"
build: [
  [make "dunes"]
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base" {>= "v0.12.0"}
  "cmdliner"
  "core_kernel" {>= "v0.11.0"}
  "ctypes"
  "ctypes-foreign"
  "dune" {build}
  "llvm" {build & = "7.0.0"}
  "ppx_compare" {>= "v0.11.0"}
  "ppx_hash" {>= "v0.11.0"}
  "zarith"
]
